# PlatformingGame

./: CMakeLists.txt  README.md  main.cpp
include/: Button.h  Game.h  Menu.h  TypeAliases.h
src/: Button.cpp  Game.cpp  Menu.cpp
